fixed the section one images on tablets

--- a/css/main.css
+++ b/css/main.css
@@ -40,7 +40,7 @@ small {
 body {
   display: grid;
   place-items: center;
-  width: 100%;
+  width: 100vw;
   min-height: 100vh;
 }
 
@@ -49,8 +49,10 @@ body {
   max-width: 1440px;
   min-height: 100vh;
   background-color: #fff;
-  display: grid;
-  place-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
   gap: 6rem;
 }
 
@@ -271,7 +273,7 @@ body {
   margin-top: 11.2rem;
   padding: 3rem 0;
   background: #4d96a9 url(/assets/mobile/image-footer.jpg) no-repeat center center/cover;
-  background-blend-mode: overlay;
+  background-blend-mode: multiply;
   position: relative;
 }
 .section--Two__body__text {
@@ -307,9 +309,6 @@ body {
 }
 
 @media (min-width: 768px) {
-  .section--One__header {
-    grid-template-columns: repeat(auto-fit, minmax(170px, 1fr));
-  }
   .section--One__header .imgContainer {
     width: 164px;
     height: 156px;
